<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

    <name>dg_minimal_tutorial</name>
    <version>1.0.0</version>
    
    <description>
        A Minimal Tutorial for Dynamic Graph Manager.
    </description>

    <maintainer email="bd1555@nyu.edu">Bolun Dai</maintainer>

    <license>BSD-3-clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>mpi_cmake_modules</buildtool_depend>

    <!-- Run time dependencies. -->
    <depend>dynamic_graph_manager</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>mim_msgs</depend>
    <depend>dynamic-graph</depend>
    <depend>dynamic-graph-python</depend>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>